--- a/.gitignore
+++ b/.gitignore
@@ -176,6 +176,7 @@ pyrightconfig.json
 ### ROS2 ###
 install/
 log/
+drivers/
 
 # Ignore generated docs
 *.dox
@@ -203,6 +204,7 @@ qtcreator-*
 COLCON_IGNORE
 AMENT_IGNORE
 
-# End of https://www.toptal.com/developers/gitignore/api/ros2,python
+# LLM
+interaction*.txt
 
-drivers/
+# End of https://www.toptal.com/developers/gitignore/api/ros2,python
